fix(consortium): Fix context mixup on data propagation
- Move consortium propagation out of central tenant transactional method
- Remove redundant AuthorityService methods

Closes: MODELINKS-273